<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/texView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/music_player_app"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/music_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/texView"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/song_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="108dp"
        android:background="@null"
        android:contentDescription="@string/previous"
        android:scaleType="fitCenter"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/song_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_title"
        app:tint="@color/purple_700" />

    <ImageButton
        android:id="@+id/forward_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="108dp"
        android:background="@null"
        android:contentDescription="@string/next"
        android:scaleType="fitCenter"
        android:src="@drawable/next_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toEndOf="@+id/song_title"
        app:layout_constraintTop_toBottomOf="@+id/song_title"
        app:tint="@color/purple_700" />

    <ImageButton
        android:id="@+id/pause_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:background="@null"
        android:contentDescription="@string/pause"
        android:scaleType="fitCenter"
        android:src="@drawable/pause_icon"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@+id/back_button"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/purple_700" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="36dp"
        android:background="@null"
        android:contentDescription="@string/play"
        android:scaleType="fitCenter"
        android:src="@drawable/play_icon_24"
        app:layout_constraintEnd_toStartOf="@+id/forward_button"
        app:layout_constraintTop_toTopOf="@+id/forward_button"
        app:tint="@color/purple_700" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/play_button"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/time_left_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/_00_00"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar" />


</androidx.constraintlayout.widget.ConstraintLayout>